setup for ng1 directive

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<html>
+<!doctype html>
+<html ng-app="scrolltableApp">
   <head>
     <title>Scroll table</title>
     <link href="scroll-table.css" rel="stylesheet"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
   </head>
 
   <body>
