folder structure change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html ng-app="scrolltableApp">
   <head>
     <title>Scroll table</title>
-    <link href="scroll-table.css" rel="stylesheet"/>
+    <link href="frontend/css/scroll-table.css" rel="stylesheet"/>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.2/angular.min.js"></script>
   </head>
 
@@ -252,7 +252,6 @@
     </table>
 
     <script src="app.js"></script>
-    <script src="scroll-table.directive.js"></script>
-    <!--<script src="scroll-table.min.js"></script>-->
+    <script src="frontend/js/scroll-table.directive.js"></script>
   </body>
 </html>
