simplified AngularJS code

--- a/indexV2.html
+++ b/indexV2.html
@@ -10,9 +10,9 @@
   </head>
 
   <body>
-
-    <table scroll-table fixed-header fixed-footer>
-      <thead class="thead-dark">
+    <scroll-table fixed-header fixed-footer>
+    <table>
+      <thead>
         <tr>
           <th>Firstname</th>
           <th>Lastname</th> 
@@ -89,9 +89,92 @@
         </tr>
       </tfoot>
     </table>
+  </scroll-table>
 
-      <table scroll-table fixed-header>
-        <thead class="thead-dark">
+  <scroll-table fixed-header>
+    <table>
+      <thead>
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th> 
+          <th>Age</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+        <tr>
+          <td>Jill</td>
+          <td>Smith</td> 
+          <td>50</td>
+        </tr>
+        <tr>
+          <td>Eve</td>
+          <td>Jackson</td> 
+          <td>94</td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th>Eve</th>
+          <th>Jackson</th>
+          <th>94</th>
+        </tr>
+      </tfoot>
+    </table>
+    </scroll-table>
+
+    <scroll-table fixed-footer>
+      <table>
+        <thead>
           <tr>
             <th>Firstname</th>
             <th>Lastname</th> 
@@ -160,7 +243,7 @@
             <td>94</td>
           </tr>
         </tbody>
-        <tfoot class="thead-dark">
+        <tfoot>
           <tr>
             <th>Eve</th>
             <th>Jackson</th>
@@ -168,86 +251,7 @@
           </tr>
         </tfoot>
       </table>
-
-
-      <table class="table" scroll-table fixed-footer>
-        <thead class="thead-dark">
-          <tr>
-            <th>Firstname</th>
-            <th>Lastname</th> 
-            <th>Age</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Jill</td>
-            <td>Smith</td> 
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Eve</td>
-            <td>Jackson</td> 
-            <td>94</td>
-          </tr>
-          <tr>
-            <td>Jill</td>
-            <td>Smith</td> 
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Eve</td>
-            <td>Jackson</td> 
-            <td>94</td>
-          </tr>
-          <tr>
-            <td>Jill</td>
-            <td>Smith</td> 
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Eve</td>
-            <td>Jackson</td> 
-            <td>94</td>
-          </tr>
-          <tr>
-            <td>Jill</td>
-            <td>Smith</td> 
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Eve</td>
-            <td>Jackson</td> 
-            <td>94</td>
-          </tr>
-          <tr>
-            <td>Jill</td>
-            <td>Smith</td> 
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Eve</td>
-            <td>Jackson</td> 
-            <td>94</td>
-          </tr>
-          <tr>
-            <td>Jill</td>
-            <td>Smith</td> 
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Eve</td>
-            <td>Jackson</td> 
-            <td>94</td>
-          </tr>
-        </tbody>
-        <tfoot class="thead-dark">
-          <tr>
-            <th>Eve</th>
-            <th>Jackson</th>
-            <th>94</th>
-          </tr>
-        </tfoot>
-      </table>
+    </scroll-table>
 
     <script src="app.js"></script>
     <script src="frontend/js/scroll-table.v2.directive.js"></script>
