fix floating header

--- a/indexV2.html
+++ b/indexV2.html
@@ -44,7 +44,7 @@
           </tr>
           <tr>
             <td>Eve</td>
-            <td>Jackson</td> 
+            <td>Jackson</td>
             <td>94</td>
           </tr>
           <tr>
@@ -267,6 +267,167 @@
           </tfoot>
         </table>
       </scroll-table>
+
+      <h2>Neste table</h2>
+      <scroll-table fixed-header fixed-footer>
+          <table>
+            <thead>
+              <tr>
+                <th>Firstname</th>
+                <th>Lastname</th> 
+                <th>Age</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td> 
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td> 
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td> 
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>
+                  <table>
+                    <thead>
+                      <tr>
+                        <th>Firstname</th>
+                        <th>Lastname</th> 
+                        <th>Age</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>Jill</td>
+                        <td>Smith</td> 
+                        <td>50</td>
+                      </tr>
+                      <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td> 
+                        <td>94</td>
+                      </tr>
+                      <tr>
+                        <td>Jill</td>
+                        <td>Smith</td> 
+                        <td>50</td>
+                      </tr>
+                      <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td> 
+                        <td>94</td>
+                      </tr>
+                      <tr>
+                        <td>Jill</td>
+                        <td>Smith</td> 
+                        <td>50</td>
+                      </tr>
+                      <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td> 
+                        <td>94</td>
+                      </tr>
+                      <tr>
+                        <td>Jill</td>
+                        <td>Smith</td> 
+                        <td>50</td>
+                      </tr>
+                      <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td> 
+                        <td>94</td>
+                      </tr>
+                      <tr>
+                        <td>Jill</td>
+                        <td>Smith</td> 
+                        <td>50</td>
+                      </tr>
+                      <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td> 
+                        <td>94</td>
+                      </tr>
+                      <tr>
+                        <td>Jill</td>
+                        <td>Smith</td> 
+                        <td>50</td>
+                      </tr>
+                      <tr>
+                        <td>Eve</td>
+                        <td>Jackson</td> 
+                        <td>94</td>
+                      </tr>
+                    </tbody>
+                    <tfoot>
+                      <tr>
+                        <th>Eve</th>
+                        <th>Jackson</th>
+                        <th>94</th>
+                      </tr>
+                    </tfoot>
+                  </table>
+                </td> 
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td> 
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td> 
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td> 
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td> 
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td> 
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td> 
+                <td>94</td>
+              </tr>
+              <tr>
+                <td>Jill</td>
+                <td>Smith</td> 
+                <td>50</td>
+              </tr>
+              <tr>
+                <td>Eve</td>
+                <td>Jackson</td> 
+                <td>94</td>
+              </tr>
+            </tbody>
+            <tfoot>
+              <tr>
+                <th>Eve</th>
+                <th>Jackson</th>
+                <th>94</th>
+              </tr>
+            </tfoot>
+          </table>
+        </scroll-table>
 
     </div>
 
